--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>Cat Dierectory</h1>
     <h2> Add your contribution by making pull request to <a href=" https://github.com/aaishikasb/ghw-demo-2024/"> https://github.com/aaishikasb/ghw-demo-2024/</a>. </h2>
+  <p>Plase add images</p>
   </body>
 </html>
